--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+h1 {
+  @apply text-2xl font-bold mb-4;
+}
+
+h3 {
+  @apply text-lg font-bold mb-2;
+}
