test: add unit tests for search component

--- a/src/app/views/search/search.component.html
+++ b/src/app/views/search/search.component.html
@@ -16,7 +16,8 @@
                         <div class="w-52 h-52">
                             <img *ngIf="bike.thumb" class="max-h-52 m-auto min-w-30" [src]="bike.thumb"
                                  [alt]="bike.title">
-                            <img *ngIf="!bike.thumb" class="max-h-52 m-auto min-w-30 bg-gray-200" src="https://bikeindex.org/assets/revised/bike_photo_placeholder-ff15adbd9bf89e10bf3cd2cd6c4e85e5d1056e50463ae722822493624db72e56.svg"
+                            <img *ngIf="!bike.thumb" class="max-h-52 m-auto min-w-30 bg-gray-200"
+                                 src="https://bikeindex.org/assets/revised/bike_photo_placeholder-ff15adbd9bf89e10bf3cd2cd6c4e85e5d1056e50463ae722822493624db72e56.svg"
                                  [alt]="bike.title">
                         </div>
                     </td>
@@ -65,6 +66,14 @@
 
         <div *ngIf="!isLoading && searchResult && searchResult.bikes.length === 0" class="mt-32 flex justify-center">
             No results found.
+        </div>
+
+        <div *ngIf="isSearchResultError" class="error-message mt-32 flex justify-center">
+            Error fetching bikes. Please try again.
+        </div>
+
+        <div *ngIf="isSearchParamsError" class="error-message mt-32 flex justify-center">
+            Error fetching search. Please try again.
         </div>
     </div>
 </div>
