--- a/src/app/views/search/search.component.html
+++ b/src/app/views/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="container m-auto mt-40">
+<div class="container m-auto lg:mt-40 p-2">
     <div class="max-w-5xl m-auto">
         <h1>Search For Bikes</h1>
         <form [formGroup]="formGroup" class="w-full" (ngSubmit)="onSubmit()">
@@ -13,7 +13,7 @@
             <table mat-table [dataSource]="dataSource">
                 <ng-container matColumnDef="image">
                     <td mat-cell *matCellDef="let bike">
-                        <div class="w-52 h-52">
+                        <div class="min-w-12 h-52 flex items-center">
                             <img *ngIf="bike.thumb" class="max-h-52 m-auto min-w-30" [src]="bike.thumb"
                                  [alt]="bike.title">
                             <img *ngIf="!bike.thumb" class="max-h-52 m-auto min-w-30 bg-gray-200"
@@ -24,7 +24,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="details">
-                    <td mat-cell *matCellDef="let bike" class="align-top !p-4">
+                    <td mat-cell *matCellDef="let bike" class="align-top !p-2 lg:!p-4">
                         <h3>{{ bike.title }}</h3>
                         <ul class="grid grid-rows-2 grid-flow-col gap-1">
                             <li>
