refactor: change search query to city name and stolen to proximity as default

--- a/src/app/views/search/search.component.html
+++ b/src/app/views/search/search.component.html
@@ -4,7 +4,7 @@
         <form [formGroup]="formGroup" class="w-full" (ngSubmit)="onSubmit()">
             <mat-form-field class="w-full">
                 <mat-icon matPrefix>search</mat-icon>
-                <mat-label>Search</mat-label>
+                <mat-label>City name</mat-label>
                 <input #searchRef class="w-full" type="text" matInput formControlName="search">
             </mat-form-field>
         </form>
