--- a/src/app/views/search/search.component.html
+++ b/src/app/views/search/search.component.html
@@ -69,11 +69,11 @@
         </div>
 
         <div *ngIf="isSearchResultError" class="error-message mt-32 flex justify-center">
-            Error fetching bikes. Please try again.
+            Error fetching bikes. Please try again later.
         </div>
 
         <div *ngIf="isSearchParamsError" class="error-message mt-32 flex justify-center">
-            Error fetching search. Please try again.
+            Error fetching search. Please try again later.
         </div>
     </div>
 </div>
